# StarkMate

./: .gitignore  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  test_redis_queue.sh
backend/: .env.example
backend/modules/: Cargo.toml
backend/modules/api/: Cargo.toml
backend/modules/api/src/: ai.rs  auth.rs  auth_tests.rs  games.rs  lib.rs  server.rs
backend/modules/chess/src/: lib.rs
backend/modules/chess/tests/: time_control_tests.rs
backend/modules/db/entity/src/: game.rs  lib.rs  prelude.rs  refresh_token.rs
backend/modules/db/migrations/src/: lib.rs  m20260127_180000_add_game_imported_flag.rs  m20260127_create_refresh_tokens_table.rs
backend/modules/dto/: Cargo.toml
backend/modules/dto/src/: auth.rs  games.rs  responses.rs
backend/modules/engine/: Cargo.toml
backend/modules/engine/src/: lib.rs  parser.rs  process.rs  uci.rs
backend/modules/matchmaking/: mod.rs  routes.rs  service.rs
backend/modules/security/: Cargo.toml
backend/modules/security/src/: lib.rs  token_service.rs
backend/modules/service/: Cargo.toml
backend/modules/tournament/: Cargo.toml  README.md
backend/modules/tournament/src/: lib.rs
backend/modules/tournament/src/swiss/: mod.rs  pairer.rs  tests.rs
backend/src/socket/: game.rs  models.rs
frontend/app/: page.tsx
frontend/hook/: useMatchmaking.ts
