[package]
name = "modules"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
async-std = { version = "1", features = ["attributes", "tokio1"] }

dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa-redoc = { version = "3", features = ["actix-web"] }
actix-cors = "0.7"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.17.0", features = ["derive"] }
rand = "0.8.5"
deadpool-redis = "0.22.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "script"] }





api = { path = "api" }
error = { path = "error" }

[workspace]
resolver = "2"
members = [
    "api",
    "db",
    "db/entity",
    "db/migrations",
    "dto",
    "error",
    "service",
    "security",
    "chess",
    "challenge",
    "tournament",
    "matchmaking",
    "engine"
]

[workspace.dependencies]
regex = "1.10.2"
utoipa = "4.2.0"


