[package]
name = "security"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
futures-util = "0.3"
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
uuid = { version = "1", features = ["v4", "serde"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
db_entity = { path = "../db/entity" }

