[package]
name = "tournament"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
name = "tournament"
path = "src/lib.rs"

[[bin]]
name = "tournament"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
