[package]
name = "tournament"
version = "0.1.0"
edition = "2021"

[lib]
name = "tournament"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
